[A3] Fully match spec

--- a/src/A3/Makefile
+++ b/src/A3/Makefile
@@ -11,3 +11,6 @@ test:
 	diff logdata.csv spec/logdata.csv
 	diff stats.csv spec/stats.csv
 	diff stats.html spec/stats.html
+
+view:
+	lynx stats.html
